# RecoServiceTemplate

./: .env  .env.testing  .gitignore  Makefile  main.py  pyproject.toml
.github/workflows/: test.yml
Notebooks/: hw2.ipynb
notebooks/: DSSM.ipynb  autoencoder.ipynb  baseline.ipynb  matrix_factorization.ipynb  matrix_factorization_.ipynb  metrcis_validation.ipynb  recbole.ipynb  tools.py  two_story_model_hw6.ipynb
service/api/: auth.py  views.py
service/api/metrcis_validation/: GridSearchCV.py  metrics.py  visualization.py
service/api/recsys/: ANNRecommendation.py  Autoencoder.py  AutoencoderRecommender.py  DSSM.py  FaissIndex.py  MultiVAE.py  PopularSocialDem.py  Ranker.py  UserKNNSocDem.py  __init__.py  get_knn_recommend.py  userknn.py
service/local_repository/: Repository.py
tests/api/: test_views.py
