[tool.poetry]
name = "reco_service"
version = "0.0.1"
description = ""
authors = ["Emiliy Feldman <feldlime@yandex.ru>"]
maintainers = ["Emiliy Feldman <feldlime@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "service" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
gunicorn = "^21.2.0"
uvloop = "^0.19.0"
uvicorn = "^0.23.0"
orjson = "^3.9.10"
starlette = "^0.27.0"
httpx = "^0.22.0"  # for starlette.testclient
pydantic-settings = "^2.0.3"
pandas = ">=0.25.3,<2.0.0"
numpy = "^1.26.2"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
rectools = "^0.4.2"
ipython = "8.18.1"
nmslib = "^2.1.1"
optuna = "^3.5.0"
nltk = "^3.8.1"
pymorphy2 = "^0.9.1"
navec = "^0.10.0"
sentence-transformers = "^2.3.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
marshmallow = "^3.20.2"
pyyaml = "^6.0.1"
faiss-cpu = "^1.7.4"
keras = "2.9"
tensorflow = "2.9"
recbole = "^1.2.0"
colorama = "^0.4.4"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
requests = "^2.31.0"
mypy = "^1.6.1"
isort = "^5.12.0"
bandit = "^1.7.5"
flake8 = "^6.1.0"
pylint = "^3.0.2"
black = "^23.10.1"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
